feat: public note
