# docs/swagger.json
@@ -162,6 +162,30 @@
                 }
             }
         },
+        "/public_notes/{id}": {
+            "get": {
+                "tags": [
+                    "note"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Note ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.noteResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "tags": [
@@ -293,16 +317,13 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "name": "email",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.vertifyRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -443,12 +464,16 @@
             "type": "object",
             "required": [
                 "content",
+                "is_public",
                 "title"
             ],
             "properties": {
                 "content": {
                     "type": "string",
                     "maxLength": 10000
+                },
+                "is_public": {
+                    "type": "boolean"
                 },
                 "title": {
                     "type": "string",
@@ -573,6 +598,9 @@
                 "id": {
                     "type": "string"
                 },
+                "is_public": {
+                    "type": "boolean"
+                },
                 "title": {
                     "type": "string"
                 },
@@ -591,11 +619,15 @@
             "type": "object",
             "required": [
                 "content",
+                "is_public",
                 "title"
             ],
             "properties": {
                 "content": {
                     "type": "string"
+                },
+                "is_public": {
+                    "type": "boolean"
                 },
                 "title": {
                     "description": "ID      string   `uri:\"id\" binding:\"required,uuid\"`",
@@ -668,6 +700,21 @@
                     "type": "string"
                 },
                 "password_changed_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.vertifyRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "token"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "token": {
                     "type": "string"
                 }
             }
